--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/PieChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/PieChartComponent.razor
@@ -1,4 +1,7 @@
-﻿@using ChartJs.Blazor.Charts
+﻿@using System.Collections
+@using System.Globalization
+@using ChartJs.Blazor.ChartJS.Common
+@using ChartJs.Blazor.Charts
 @using ChartJs.Blazor.ChartJS.PieChart
 @using ChartJs.Blazor.ChartJS.Common.Properties
 @using ChartJs.Blazor.Util
@@ -7,43 +10,126 @@
 
 <ChartJsPieChart @ref="_pieChartJs" Config="@_config" Width="600" Height="300"/>
 
-@code {
-    private PieConfig _config;
-    private ChartJsPieChart _pieChartJs;
 
-    protected override void OnInitialized()
-    {
-        _config = new PieConfig
-        {
-            Options = new PieOptions
-            {
-                Title = new OptionsTitle
-                {
-                    Display = true,
-                    Text = "Sample chart from Blazor"
-                },
-                Responsive = true,
-                Animation = new ArcAnimation
-                {
-                    AnimateRotate = true,
-                    AnimateScale = true
-                }
-            }
-        };
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <button class="btn btn-primary" @onclick="AddData">Add data</button>
+                    </div>
+                    <div class="col">
+                        <button class="btn btn-outline-danger" @onclick="RemoveData">Remove data</button>
+                                </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col">
+                                        <button class="btn btn-primary" @onclick="AddDataset">Add dataset</button>
+                                                </div>
+                                                <div class="col">
+                                                    <button class="btn btn-outline-danger" @onclick="RemoveDataset">Remove dataset</button>
+                                                            </div>
+                                                            </div>
+                                                            </div>
 
-        _config.Data.Labels.AddRange(new[] {"A", "B", "C", "D"});
+                                                            @code {
+                                                                private PieConfig _config;
+                                                                private ChartJsPieChart _pieChartJs;
 
-        var pieSet = new PieDataset
-        {
-            BackgroundColor = new[] { ColorUtil.RandomColorString(), ColorUtil.RandomColorString(), ColorUtil.RandomColorString(), ColorUtil.RandomColorString() },
-            BorderWidth = 0,
-            HoverBackgroundColor = ColorUtil.RandomColorString(),
-            HoverBorderColor = ColorUtil.RandomColorString(),
-            HoverBorderWidth = 1,
-            BorderColor = "#ffffff",
-        };
+                                                                protected override void OnInitialized()
+                                                                {
+                                                                    _config = new PieConfig
+                                                                    {
+                                                                        Options = new PieOptions
+                                                                        {
+                                                                            Title = new OptionsTitle
+                                                                            {
+                                                                                Display = true,
+                                                                                Text = "Sample chart from Blazor"
+                                                                            },
+                                                                            Responsive = true,
+                                                                            Animation = new ArcAnimation
+                                                                            {
+                                                                                AnimateRotate = true,
+                                                                                AnimateScale = true
+                                                                            }
+                                                                        }
+                                                                    };
 
-        pieSet.Data.AddRange(new double[] {4, 5, 6, 7});
-        _config.Data.Datasets.Add(pieSet);
-    }
-}
+                                                                    _config.Data.Labels.AddRange(new[] {"A", "B", "C", "D"});
+
+                                                                    var pieSet = new PieDataset
+                                                                    {
+                                                                        BackgroundColor = new[] {ColorUtil.RandomColorString(), ColorUtil.RandomColorString(), ColorUtil.RandomColorString(), ColorUtil.RandomColorString()},
+                                                                        BorderWidth = 0,
+                                                                        HoverBackgroundColor = ColorUtil.RandomColorString(),
+                                                                        HoverBorderColor = ColorUtil.RandomColorString(),
+                                                                        HoverBorderWidth = 1,
+                                                                        BorderColor = "#ffffff",
+                                                                    };
+
+                                                                    pieSet.Data.AddRange(new double[] {4, 5, 6, 7});
+                                                                    _config.Data.Datasets.Add(pieSet);
+                                                                }
+
+                                                                private void AddData()
+                                                                {
+                                                                    var dataset = _config.Data.Datasets.LastOrDefault();
+                                                                    if (dataset == null)
+                                                                    {
+                                                                        return;
+                                                                    }
+
+                                                                    var rand = new Random();
+                                                                    var newVal = 1 + rand.NextDouble() * 10;
+                                                                    _config.Data.Labels.Add(newVal.ToString(CultureInfo.InvariantCulture));
+                                                                    dataset.Data.Add(newVal);
+                                                                    dataset.BackgroundColor = dataset.BackgroundColor.IndexedValues.Append(ColorUtil.RandomColorString()).ToArray();
+
+                                                                    _pieChartJs.Update();
+                                                                }
+
+                                                                private void RemoveData()
+                                                                {
+                                                                    var dataset = _config.Data.Datasets.LastOrDefault();
+                                                                    if (dataset == null || dataset.Data.Count < 1)
+                                                                    {
+                                                                        return;
+                                                                    }
+
+                                                                    _config.Data.Labels.RemoveAt(_config.Data.Labels.Count - 1);
+                                                                    dataset.Data.RemoveAt(dataset.Data.Count - 1);
+
+                                                                    _pieChartJs.Update();
+                                                                }
+
+                                                                private void AddDataset()
+                                                                {
+                                                                    var pieSet = new PieDataset
+                                                                    {
+                                                                        BorderWidth = 0,
+                                                                        HoverBackgroundColor = ColorUtil.RandomColorString(),
+                                                                        HoverBorderColor = ColorUtil.RandomColorString(),
+                                                                        HoverBorderWidth = 1,
+                                                                        BorderColor = "#ffffff",
+                                                                    };
+
+                                                                // determine the number of data points to add
+                                                                    var count = _config.Data.Labels.Count;
+
+                                                                    var rand = new Random();
+                                                                    pieSet.Data.AddRange(Enumerable.Range(0, count).Select(i => Convert.ToDouble(rand.Next(0, 10))));
+                                                                    pieSet.BackgroundColor = Enumerable.Range(0, count).Select(i => ColorUtil.RandomColorString()).ToArray();
+
+                                                                    _config.Data.Datasets.Add(pieSet);
+                                                                    _pieChartJs.Update();
+                                                                }
+
+                                                                private void RemoveDataset()
+                                                                {
+                                                                    if (_config.Data.Datasets.Count > 1)
+                                                                    {
+                                                                        _config.Data.Datasets.RemoveAt(_config.Data.Datasets.Count - 1);
+                                                                        _pieChartJs.Update();
+                                                                    }
+                                                                }
+
+                                                            }
