basic Mono Linker config for Blazor

--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/HorizontalBarChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/HorizontalBarChartComponent.razor
@@ -20,7 +20,7 @@
 	        @code {
 
 		        // https://github.com/Joelius300/ChartJSBlazor/issues/18
-		        private ReferenceConverter _referenceConverter = new ReferenceConverter(typeof(ChartJsBarChart));
+//		        private ReferenceConverter _referenceConverter = new ReferenceConverter(typeof(ChartJsBarChart));
 
 		        private BarConfig _barChartConfig;
 		        private ChartJsBarChart _barChart;
